tests/fixtures/valid/builtins/reversed.py
# Valid reversed() calls
# Auto-generated by scripts/generate_tests.py

b0_reversed_str = reversed("hello")
b1_reversed_bytes = reversed(b"hello")
b2_reversed_list = reversed([1, 2, 3])
b3_reversed_dict = reversed({"a": 1})

# Print all variables
print("b0_reversed_str:", b0_reversed_str)
print("b1_reversed_bytes:", b1_reversed_bytes)
print("b2_reversed_list:", b2_reversed_list)
print("b3_reversed_dict:", b3_reversed_dict)

print("reversed() tests passed!")
